// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flex renders Flex with direction prop 1`] = `
<body>
  <div>
    <div
      class="c-hJgkFV c-hJgkFV-iTKOFX-direction-column"
    >
      Test
    </div>
  </div>
</body>
`;

exports[`Flex renders Flex with justifyContent prop 1`] = `
<body>
  <div>
    <div
      class="c-hJgkFV c-hJgkFV-bICGYT-justifyContent-center"
    >
      Test
    </div>
  </div>
</body>
`;

exports[`Flex renders Flex with wrap prop 1`] = `
<body>
  <div>
    <div
      class="c-hJgkFV c-hJgkFV-XefLA-wrap-wrap"
    >
      Test
    </div>
  </div>
</body>
`;
